fix: improve text readability

--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,22 @@
   }
 }
 
+@keyframes swing {
+
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(1deg);
+  }
+
+  75% {
+    transform: rotate(-1deg);
+  }
+}
+
 /* Custom scrollbar */
 ::-webkit-scrollbar {
   width: 12px;
